--- a/public_html/styles.css
+++ b/public_html/styles.css
@@ -4,8 +4,8 @@ body {
     margin: 0;
     padding: 0;
 }
-header {
-    background-color: #333;
+.header1 {
+    background-color: #d6d0d0;
     color: #fff;
     text-align: center;
     padding: 20px 0;
@@ -14,7 +14,7 @@ h1 {
     margin: 0;
 }
 nav {
-    background-color: #444;
+    background-color: #d6d0d0;
 }
 nav ul {
     list-style-type: none;
@@ -33,14 +33,24 @@ nav a {
     max-width: 960px;
     margin: 0 auto;
     padding: 20px;
+    background-color: #d6d0d0;
+    display: flex;
 }
 h2 {
     color: #333;
-}
-p {
-    margin: 0 0 20px;
 }
 .services {
     background-color: #fff;
     padding: 20px;
 }
+
+.imgRed{
+    width: 150px; 
+    height: 50px; 
+    margin: 85px; 
+    border-style: solid;
+    border-radius: 20px; 
+    border-width: 2px; 
+    border-color: black;
+}
+
